docs/performance/baselines/baseline_20251112_111248.txt
 Downloading crates ...
  Downloaded document-features v0.2.12
  Downloaded litrs v1.0.0
  Downloaded gpu-descriptor-types v0.2.0
  Downloaded gpu-descriptor v0.3.2
  Downloaded wgpu-core v0.21.1
  Downloaded wgpu v0.20.1
  Downloaded wgpu-hal v0.21.1
  Downloaded wgpu-types v0.20.0
  Downloaded metal v0.28.0
  Downloaded naga v0.20.0
   Compiling proc-macro2 v1.0.103
   Compiling quote v1.0.42
   Compiling unicode-ident v1.0.22
   Compiling libc v0.2.177
   Compiling cfg-if v1.0.4
   Compiling autocfg v1.5.0
   Compiling libm v0.2.15
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling once_cell v1.21.3
   Compiling smallvec v1.15.1
   Compiling paste v1.0.15
   Compiling bitflags v2.10.0
   Compiling zerocopy v0.8.27
   Compiling parking_lot_core v0.9.12
   Compiling itoa v1.0.15
   Compiling scopeguard v1.2.0
   Compiling typenum v1.19.0
   Compiling pin-project-lite v0.2.16
   Compiling core-foundation-sys v0.8.7
   Compiling thiserror v1.0.69
   Compiling memchr v2.7.6
   Compiling futures-core v0.3.31
   Compiling hashbrown v0.16.0
   Compiling equivalent v1.0.2
   Compiling bytes v1.10.1
   Compiling cfg_aliases v0.1.1
   Compiling fnv v1.0.7
   Compiling rawpointer v0.2.1
   Compiling getrandom v0.3.4
   Compiling futures-sink v0.3.31
   Compiling log v0.4.28
   Compiling lock_api v0.4.14
   Compiling stable_deref_trait v1.2.1
   Compiling serde_json v1.0.145
   Compiling find-msvc-tools v0.1.4
   Compiling shlex v1.3.0
   Compiling bitflags v1.3.2
   Compiling slab v0.4.11
   Compiling ryu v1.0.20
   Compiling futures-channel v0.3.31
   Compiling pin-utils v0.1.0
   Compiling crossbeam-utils v0.8.21
   Compiling rustix v1.1.2
   Compiling futures-io v0.3.31
   Compiling futures-task v0.3.31
   Compiling tracing-core v0.1.34
   Compiling cc v1.2.45
   Compiling termcolor v1.4.1
   Compiling fastrand v2.3.0
   Compiling unicode-width v0.1.14
   Compiling version_check v0.9.5
   Compiling either v1.15.0
   Compiling foreign-types-shared v0.3.1
   Compiling rayon-core v1.13.0
   Compiling bit-vec v0.6.3
   Compiling block v0.1.6
   Compiling litemap v0.8.1
   Compiling httparse v1.10.1
   Compiling regex-syntax v0.8.8
   Compiling writeable v0.6.2
   Compiling unicode-xid v0.2.6
   Compiling hexf-parse v0.2.1
   Compiling rustc-hash v1.1.0
   Compiling arrayvec v0.7.6
   Compiling icu_properties_data v2.1.1
   Compiling codespan-reporting v0.11.1
   Compiling icu_normalizer_data v2.1.1
   Compiling libloading v0.8.9
   Compiling httpdate v1.0.3
   Compiling raw-window-handle v0.6.2
   Compiling bit-set v0.5.3
   Compiling profiling v1.0.17
   Compiling ciborium-io v0.2.2
   Compiling percent-encoding v2.3.2
   Compiling anstyle v1.0.13
   Compiling clap_lex v0.7.6
   Compiling semver v1.0.27
   Compiling plotters-backend v0.3.7
   Compiling native-tls v0.2.14
   Compiling aho-corasick v1.1.4
   Compiling form_urlencoded v1.2.2
   Compiling clap_builder v4.5.51
   Compiling itertools v0.10.5
   Compiling indexmap v2.12.0
   Compiling http v0.2.12
   Compiling rustc_version v0.4.1
   Compiling plotters-svg v0.3.7
   Compiling http v1.3.1
   Compiling wgpu-hal v0.19.5
   Compiling try-lock v0.2.5
   Compiling system-configuration-sys v0.5.0
   Compiling same-file v1.0.6
   Compiling crossbeam-epoch v0.9.18
   Compiling cast v0.3.0
   Compiling walkdir v2.5.0
   Compiling want v0.3.1
   Compiling wgpu-types v0.19.2
   Compiling generic-array v0.14.9
   Compiling iana-time-zone v0.1.64
   Compiling syn v2.0.110
   Compiling num-traits v0.2.19
   Compiling matrixmultiply v0.3.10
   Compiling crossbeam-deque v0.8.6
   Compiling wgpu-core v0.19.4
   Compiling oorandom v11.1.5
   Compiling core-foundation v0.9.4
   Compiling signal-hook-registry v1.4.6
   Compiling mio v1.1.0
   Compiling socket2 v0.6.1
   Compiling getrandom v0.2.16
   Compiling errno v0.3.14
   Compiling malloc_buf v0.0.6
   Compiling parking_lot v0.12.5
   Compiling rand_core v0.6.4
   Compiling rand_core v0.9.3
   Compiling security-framework-sys v2.15.0
   Compiling core-graphics-types v0.1.3
   Compiling curve25519-dalek v4.1.3
   Compiling is-terminal v0.4.17
   Compiling socket2 v0.5.10
   Compiling cpufeatures v0.2.17
   Compiling security-framework v2.11.1
   Compiling anes v0.1.6
   Compiling tower-service v0.3.3
   Compiling utf8_iter v1.0.4
   Compiling wgpu v0.19.4
   Compiling http-body v0.4.6
   Compiling wgpu-hal v0.21.1
   Compiling base64 v0.21.7
   Compiling http-body v1.0.1
   Compiling static_assertions v1.1.0
   Compiling atomic-waker v1.1.2
   Compiling zeroize v1.8.2
   Compiling subtle v2.6.1
   Compiling signature v2.2.0
   Compiling system-configuration v0.5.1
   Compiling wait-timeout v0.2.1
   Compiling ed25519 v2.2.3
   Compiling rayon v1.11.0
   Compiling rustls-pemfile v1.0.4
   Compiling wgpu-types v0.20.0
   Compiling wgpu-core v0.21.1
   Compiling crypto-common v0.1.6
   Compiling block-buffer v0.10.4
   Compiling encoding_rs v0.8.35
   Compiling litrs v1.0.0
   Compiling digest v0.10.7
   Compiling sync_wrapper v0.1.2
   Compiling ipnet v2.11.0
   Compiling bit-vec v0.8.0
   Compiling mime v0.3.17
   Compiling quick-error v1.2.3
   Compiling num-integer v0.1.46
   Compiling approx v0.5.1
   Compiling plotters v0.3.7
   Compiling criterion-plot v0.5.0
   Compiling sha2 v0.10.9
   Compiling rand_xorshift v0.4.0
   Compiling bit-set v0.8.0
   Compiling wgpu v0.20.1
   Compiling pollster v0.3.0
   Compiling unarray v0.1.4
   Compiling hex v0.4.3
   Compiling http-body-util v0.1.3
   Compiling colored v3.0.0
   Compiling similar v2.7.0
   Compiling num-rational v0.4.2
   Compiling regex-automata v0.4.13
   Compiling tempfile v3.23.0
   Compiling clap v4.5.51
   Compiling rusty-fork v0.3.1
   Compiling document-features v0.2.12
   Compiling objc_exception v0.1.2
   Compiling regex v1.12.2
   Compiling objc v0.2.7
   Compiling synstructure v0.13.2
   Compiling serde_derive v1.0.228
   Compiling zerocopy-derive v0.8.27
   Compiling thiserror-impl v1.0.69
   Compiling bytemuck_derive v1.10.2
   Compiling zerofrom-derive v0.1.6
   Compiling tokio-macros v2.6.0
   Compiling yoke-derive v0.8.1
   Compiling nalgebra-macros v0.2.2
   Compiling zerovec-derive v0.11.2
   Compiling displaydoc v0.2.5
   Compiling futures-macro v0.3.31
   Compiling tracing-attributes v0.1.30
   Compiling foreign-types-macros v0.2.3
   Compiling curve25519-dalek-derive v0.1.1
   Compiling async-stream-impl v0.3.6
   Compiling async-trait v0.1.89
   Compiling foreign-types v0.5.0
   Compiling metal v0.27.0
   Compiling metal v0.28.0
   Compiling tokio v1.48.0
   Compiling futures-util v0.3.31
   Compiling ed25519-dalek v2.2.0
   Compiling async-stream v0.3.6
   Compiling naga v0.19.2
   Compiling naga v0.20.0
   Compiling bytemuck v1.24.0
   Compiling safe_arch v0.7.4
   Compiling zerofrom v0.1.6
   Compiling wide v0.7.33
   Compiling tracing v0.1.41
   Compiling yoke v0.8.1
   Compiling zerovec v0.11.5
   Compiling zerotrie v0.2.3
   Compiling tinystr v0.8.2
   Compiling potential_utf v0.1.4
   Compiling icu_collections v2.1.1
   Compiling icu_locale_core v2.1.1
   Compiling futures-executor v0.3.31
   Compiling num-complex v0.4.6
   Compiling tinytemplate v1.2.1
   Compiling chrono v0.4.42
   Compiling serde_urlencoded v0.7.1
   Compiling ordered-float v4.6.0
   Compiling assert-json-diff v2.0.2
   Compiling futures v0.3.31
   Compiling ppv-lite86 v0.2.21
   Compiling half v2.7.1
   Compiling simba v0.8.1
   Compiling ndarray v0.15.6
   Compiling simba v0.9.1
   Compiling ciborium-ll v0.2.2
   Compiling rand_chacha v0.3.1
   Compiling rand_chacha v0.9.0
   Compiling icu_provider v2.1.1
   Compiling ciborium v0.2.2
   Compiling rand v0.9.2
   Compiling rand v0.8.5
   Compiling icu_normalizer v2.1.1
   Compiling icu_properties v2.1.1
   Compiling tokio-util v0.7.17
   Compiling tokio-native-tls v0.3.1
   Compiling tokio-stream v0.1.17
   Compiling criterion v0.5.1
   Compiling proptest v1.9.0
   Compiling rand_distr v0.4.3
   Compiling tokio-test v0.4.4
   Compiling h2 v0.3.27
   Compiling h2 v0.4.12
   Compiling idna_adapter v1.2.1
   Compiling idna v1.1.0
   Compiling url v2.5.7
   Compiling hyper v0.14.32
   Compiling hyper v1.8.0
   Compiling nalgebra v0.32.6
   Compiling nalgebra v0.33.2
   Compiling hyper-util v0.1.17
   Compiling mockito v1.7.0
   Compiling hyper-tls v0.5.0
   Compiling reqwest v0.11.27
   Compiling hyperphysics-geometry v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-geometry)
   Compiling hyperphysics-pbit v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-pbit)
   Compiling hyperphysics-market v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-market)
warning: unused import: `Serialize`
  --> crates/hyperphysics-market/src/providers/alpaca.rs:39:26
   |
39 | use serde::{Deserialize, Serialize};
   |                          ^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `serde_json::Error: From<ParseError>` is not satisfied
   --> crates/hyperphysics-market/src/providers/alpaca.rs:215:52
    |
215 |             .map_err(|e| MarketError::ParseError(e.into()))?
    |                                                    ^^^^ the trait `From<ParseError>` is not implemented for `serde_json::Error`
    |
    = note: required for `ParseError` to implement `Into<serde_json::Error>`

   Compiling hyperphysics-thermo v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-thermo)
   Compiling hyperphysics-consciousness v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-consciousness)
warning: unused variable: `base_url`
  --> crates/hyperphysics-market/src/providers/alpaca.rs:62:13
   |
62 |         let base_url = if paper {
   |             ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_base_url`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

   Compiling hyperphysics-risk v0.1.0 (/Users/ashina/Desktop/Kurultay/HyperPhysics/crates/hyperphysics-risk)
For more information about this error, try `rustc --explain E0277`.
warning: `hyperphysics-market` (lib) generated 2 warnings
error: could not compile `hyperphysics-market` (lib) due to 1 previous error; 2 warnings emitted
warning: build failed, waiting for other jobs to finish...
error[E0308]: mismatched types
  --> crates/hyperphysics-risk/src/landauer.rs:21:23
   |
21 |             enforcer: LandauerEnforcer::new(temperature),
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `LandauerEnforcer`, found `Result<LandauerEnforcer, ThermoError>`
   |
   = note: expected struct `LandauerEnforcer`
                found enum `std::result::Result<LandauerEnforcer, ThermoError>`
help: use the `?` operator to extract the `std::result::Result<LandauerEnforcer, ThermoError>` value, propagating a `Result::Err` value to the caller
   |
21 |             enforcer: LandauerEnforcer::new(temperature)?,
   |                                                         +

For more information about this error, try `rustc --explain E0308`.
error: could not compile `hyperphysics-risk` (lib) due to 1 previous error
warning: `hyperphysics-market` (lib test) generated 2 warnings (2 duplicates)
error: could not compile `hyperphysics-market` (lib test) due to 1 previous error; 2 warnings emitted
